# FreeCT_Reader_DEPRECATED

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.c  makefile
applications/: CMakeLists.txt
applications/fct_read/: CMakeLists.txt  main.cpp
applications/tests/: FreeCTDataSet_test.cpp
include/: acb_v30002.h  binary.h  common_v1741.h  ctd.h  dicom.h  fct_read.h  force_read.h  ptr.h  sensation64_v1794_read.h  siemens_ima.h
modules/fct_read/: CMakeLists.txt
modules/fct_read/include/: DicomDataSet.h  DicomFrame.h  FreeCTDataSet.h  FreeCTRead.h  RawDataFrame.h  RawDataSet.h  binary_read.h  common_v2007.h  definitionas.h  definitionas_read.h  dicom_read.h  fct_read.h  force.h  force_read.h  imawrapper_read.h  return_v1741.h  sensation64_frame_structs.h  sensation64_v1794_read.h  sensation64_v2007_read.h
modules/fct_read/src/: DicomDataSet.cpp  DicomFrame.cpp  FreeCTDataSet.cpp  RawDataFrame.cpp  RawDataSet.cpp  binary_read.cpp  definitionas_read.cpp  dicom_read.cpp  force_read.cpp  imawrapper_read.cpp  sensation64_v1794_read.cpp  sensation64_v2007_read.cpp
modules/fct_read/src/reader_exe/: .#main.cpp
src/: binary.c  ctd.c  dicom.c  makefile  ptr.c  siemens_ima.c
